Update project and solution to working version

--- a/NeuroN/index.html
+++ b/NeuroN/index.html
@@ -19,6 +19,7 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
     <!-- 2. Configure SystemJS -->
     <script>
         System.config({
@@ -35,7 +36,7 @@
 </head>
 
 <body>
-<ne-app>Loading...</ne-app>
+<nn-app>Loading...</nn-app>
 Starter files for Angular2: Getting Started
 </body>
 
