--- a/NeuroN/index.html
+++ b/NeuroN/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/" />
-    <title>Acme Product Management</title>
+    <title>Neurosoft NeuroN FrameworK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
@@ -10,11 +10,21 @@
 
     <link href="app/app.component.css" rel="stylesheet" />
     <link href="app/shared/menu/menu.component.css" rel="stylesheet" />
-    <link href="app/shared/menu/menu-item.component.css" rel="stylesheet" />
+    <link href="app/shared/menu/menu-item.component.css" rel="stylesheet"/>
+
+    <link href="Content/neuron-style.css" rel="stylesheet" />
+
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
-    <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+
+    <!--<script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
@@ -24,10 +34,12 @@
 
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
-
+-->
     <!-- 2. Configure SystemJS -->
+    <script src="systemjs.config.js"></script>
     <script>
-        System.config({
+        System.import('app').catch(function(err) { console.error(err); });
+        /*System.config({
             map: {
                 //'ng2-cookies': 'node_modules/ng2-cookies'
 
@@ -40,7 +52,7 @@
             }
         });
         System.import('app/main')
-            .then(null, console.error.bind(console));
+            .then(null, console.error.bind(console));*/
     </script>
 </head>
 
@@ -48,7 +60,7 @@
 
     <nn-app>Loading...</nn-app>
 
-    Starter files for Angular2: Getting Started
+    <!--Starter files for Angular2: Getting Started-->
 </body>
 
 </html>
