Added blogging module Fixed todo module Updated to newest angular

--- a/NeuroN/index.html
+++ b/NeuroN/index.html
@@ -22,6 +22,7 @@
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+
     <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.min.js"></script>
 
     <!--<script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
@@ -38,7 +39,9 @@
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-        System.import('app').catch(function(err) { console.error(err); });
+        System.import('app').catch(function (err) {
+            console.error(err);
+        });
         /*System.config({
             map: {
                 //'ng2-cookies': 'node_modules/ng2-cookies'
