--- a/NeuroN/index.html
+++ b/NeuroN/index.html
@@ -5,7 +5,9 @@
     <title>Neurosoft NeuroN FrameworK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.1.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.min.js"></script>
+
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
 
