Refactor, clean code. Tasks finished Blog finished Avatar started

--- a/NeuroN/index.html
+++ b/NeuroN/index.html
@@ -27,6 +27,8 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
     <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.min.js"></script>
+    <!--<script src="node_modules/angular2-moment/index.js"></script>-->
+
 
     <!--<script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
@@ -62,7 +64,8 @@
     </script>
 </head>
 
-<body class="container-fluid">
+<!--<body class="container-fluid">-->
+<body>
 
     <nn-app>Loading...</nn-app>
 
